Work on swagger documentation
