# src/api/users/users.py
@@ -4,7 +4,7 @@ from .functions import *
 
 users_bp = Blueprint('users', __name__)
 
-@users_bp.route('/users')
+@users_bp.route('/users', methods=['GET', 'POST'])
 @requires_auth
 def users():
     """
@@ -25,7 +25,7 @@ def users():
         else:
             return jsonify(response), 200
 
-@users_bp.route('/users/<int:user_id>', methods=['GET'])
+@users_bp.route('/users/<int:id>', methods=['GET'])
 @requires_auth
 def get_user(user_id):
     """
